@@ -1,0 +1,22 @@
+package org.jsoup.integration;
+
+import org.jsoup.Jsoup;
+import org.jsoup.nodes.Document;
+import org.junit.jupiter.api.Test;
+
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+/**
+ Tests fixes for issues raised by the OSS Fuzz project @ https://oss-fuzz.com/testcases?project=jsoup
+ */
+public class FuzzFixesTest {
+
+    @Test
+    public void blankAbsAttr() {
+        // https://github.com/jhy/jsoup/issues/1541
+        String html = "b<bodY abs: abs:abs: abs:abs:abs>";
+        Document doc = Jsoup.parse(html);
+        assertNotNull(doc);
+    }
+}
